k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-k8s-app-svc
spec:
  ports:
    - port: 80
      targetPort: http
  selector:
    app: spring-boot-k8s-app
